syntax = "proto3";

package room.v1;

service RoomService {
    rpc ListAvailableRooms(ListAvailableRoomsRequest) returns (ListAvailableRoomsResponse);
}

enum CampusType {
    CAMPUS_TYPE_UNSPECIFIED = 0;
    CAMPUS_TYPE_NAKAMEGURO = 1;
    CAMPUS_TYPE_IKEBUKURO = 2;
}

enum PianoType {
    PIANO_TYPE_UNSPECIFIED = 0;
    PIANO_TYPE_GRAND = 1;
    PIANO_TYPE_UPRIGHT = 2;
    PIANO_TYPE_NONE = 3;
}

message Room {
    string id = 1;
    string name = 2;
    PianoType piano_type = 3;
    int32 piano_count = 4;
    bool is_classroom = 5;
    bool is_basement = 6;
    CampusType campus_type = 7;
    int32 floor = 8;
}

message ListAvailableRoomsRequest {
    CampusType campus_type = 1;
    string date = 2;
    int32 from_hour = 3;
    int32 from_minute = 4;
    int32 to_hour = 5;
    int32 to_minute = 6;
}

message ListAvailableRoomsResponse {
    repeated Room rooms = 1;
}
